# 2023-m2-feelpp-avnir

./: .gitignore  404.html  CMakeLists.txt  CMakePresets.json  README.adoc  README.md  index.html  package-lock.json  package.json  pyproject.toml  rename.sh  requirements.txt  site.yml  sitemap.xml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
2023-m2-feelpp-sonorhc/: index.html  overview.html  quickstart.html
2023-m2-feelpp-sonorhc/_attachments/Mesures_expe_plaque/Mesures_temporelles/: MS_Plaque1_F1_Avg2.csv  MS_Plaque1_F2_Avg4.csv  MS_Plaque1_F3_Avg3.csv  MS_Plaque2_F1_Avg1.csv  MS_Plaque2_F1_Avg4.csv  MS_Plaque2_F2_Avg5.csv
2023-m2-feelpp-sonorhc/_attachments/examples/: wave-cfpde.ipynb  wave-fd.ipynb
2023-m2-feelpp-sonorhc/_attachments/urban_area/: Doua_phy_names.geo_unrolled  Doua_phy_names_hplus.geo_unrolled
2023-m2-feelpp-sonorhc/env/: antora.html  cmake.html  githubactions.html  jupyter.html  rename.html  vscode.html
2023-m2-feelpp-sonorhc/examples/: elasticity-fem.html  fin.html  index.html  wave-cfpde.html  wave-fd.html  wave-fem.html
2023-m2-feelpp-sonorhc/research/: abstract.html  fems.html  index.html  pml.html  wave_equation.html
docs/: antora.yml
docs/antora/supplemental-ui/partials/: header-content.hbs
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/attachments/: 20230803_Resultats_ABAQUS_IMPLICIT.pptx  ResultatsAsterPlaque3S.pptx
docs/modules/ROOT/attachments/Mesures_expe_plaque/: 1289-043-A_AP214.STEP  Donnees-Experimentales.pptx
docs/modules/ROOT/attachments/Mesures_expe_plaque/Mesures_temporelles/: MS_Plaque1_F1_Avg1.csv  MS_Plaque1_F1_Avg3.csv  MS_Plaque1_F1_Avg4.csv  MS_Plaque1_F1_Avg5.csv  MS_Plaque1_F2_Avg1.csv  MS_Plaque1_F2_Avg2.csv  MS_Plaque1_F2_Avg3.csv  MS_Plaque1_F2_Avg5.csv  MS_Plaque1_F3_Avg1.csv  (+15 more)
docs/modules/ROOT/attachments/urban_area/: Doua.geo_unrolled  Doua_phy_names.geo_unrolled  Doua_phy_names_hplus.geo_unrolled  README.txt
docs/modules/ROOT/pages/: index.adoc  overview.adoc  quickstart.adoc
docs/modules/ROOT/pages/env/: antora.adoc  cmake.adoc  githubactions.adoc  rename.adoc  vscode.adoc
docs/modules/ROOT/pages/examples/: elasticity-fem.adoc  fin.adoc  index.adoc  wave-cfpde.adoc  wave-fd.adoc  wave-fem.adoc
docs/modules/ROOT/pages/research/: abstract.adoc  fems.adoc  index.adoc  pml.adoc  wave_equation.adoc
feelpp-project/: index.html  overview.html  quickstart.html
feelpp-project/env/: antora.html  cmake.html  githubactions.html  jupyter.html  rename.html  vscode.html
feelpp-project/examples/: fin.html  index.html
src/: CMakeLists.txt  _laplacian.cpp  _wave.cpp  elasticity.cpp  elasticity.hpp  laplacian.cpp  laplacian.hpp  laplacian.py  wave.cpp  wave.hpp  wavelet.hpp
src/cases/elastic/: elastic.cfg  elastic.json  square.geo
src/cases/elastic_reversal/: Sensor1_reversed.csv  Sensor2_reversed.csv  Sensor3_reversed.csv  elastic_reversal.cfg  elastic_reversal.json  elastic_reversal_3d.json  parallelepiped.geo  parallelepiped_damaged.geo  square.geo  square_damaged.geo
src/cases/elastic_wavelet/: elastic_wavelet.cfg  elastic_wavelet.json  elastic_wavelet_3d.json  parallelepiped.geo  plaque.geo  square.geo
src/cases/laplacian/: laplacian.ipynb
src/cases/laplacian/fin/: fin.geo  fin2d.json
src/cases/laplacian/fin/fin4/: fin2d.cfg
src/cases/laplacian/onde/: elastic.json  onde.cfg  onde.json  plaque.geo  square.geo  square2d.geo
src/cases/laplacian/onde/onde/: onde.cfg  readme.md
src/cases/wave/square2d/: circle2d.geo  square2d.cfg  square2d.geo  square2d.json  square2d_bat.geo
src/cases/wave/square3d/: square3d.cfg  square3d.geo  square3d.json
src/cases/wave/urban_area/: Doua_phy_names_hplus.cfg  Doua_phy_names_hplus.geo  Doua_phy_names_hplus.json
src/feelpp_sonorhc/: laplacian.py  wave.py
src/feelpp_sonorhc/fd/: wave_2d.py
